# MedIQ

./: LICENSE  README.md
Scripts/: OPTIMIZATION_NOTE.md  README.md  check_services.sh  reset_databases.sh  run_all_seeds.sh  run_all_services.sh  stop_all_services.sh  verify_seeding.sh
apps/backend/identity-service/: .env.example  .env.test  README.md  main.py  pyproject.toml  validate.py
apps/backend/identity-service/app/: database.py
apps/backend/identity-service/app/core/: config.py
apps/backend/identity-service/app/models/: __init__.py  audit_log.py  base.py  consent_application.py  diagnosis.py  encounter.py  medication.py  observation.py  organization.py  patient.py  patient_record.py  user.py
apps/backend/identity-service/app/routers/: __init__.py  diagnoses.py  encounters.py  medications.py  observations.py  organizations.py  patient_records.py  patients.py  users.py
apps/backend/identity-service/app/schemas/: __init__.py  audit_log.py  diagnosis.py  encounter.py  enums.py  medication.py  observation.py  organization.py  patient.py  patient_record.py  user.py
apps/backend/identity-service/app/services/: __init__.py  audit_service.py  auth_service.py  consent_enforcement_service.py  consent_gate.py  diagnosis_service.py  encounter_service.py  medication_service.py  observation_service.py  organization_service.py  patient_record_service.py  patient_service.py  user_service.py
docs/: consent-services-architecture.md  identity-consent-integration.md  researcher-portal-benefits.md  researcher-portal-feature-spec.md  researcher-portal-innovations.md
(+128 files in other folders)
