[project]
name = "identity-service"
version = "0.1.0"
description = "Identity Service for MedIQ Healthcare Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.128.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
]
